[package]
name = "non-dominated-sort"
version = "0.3.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/non-dominated-sort-rs"
description = "Fast Non-Dominated Sort Algorithm"
keywords = ["sort", "algorithm", "pareto"]
edition = "2018"

include = ["**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[profile.release]
debug = true

[dependencies]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_non_dominated_sort"
harness = false
